--- a/css/generics.css
+++ b/css/generics.css
@@ -35,23 +35,24 @@ p {
 }
 
 span {
-	border-bottom: 2px solid #ff80ab;
 	display: inline-block;
-	padding-left: 2px;
-	padding-right: 2px;
+	padding: 0 2px;
+}
+
+.underlined {
+	border-bottom: 3px solid #ff80ab;
+}
+
+.highlighted {
+	color: #ff80ab;
+	font-weight: 400;
+	letter-spacing: 1px;
+	padding-bottom: 4px;
+	text-shadow: 2px 2px 2px #00139c;
 	transition: 1s;
 }
 
-span.penguin {
-	color: #ff80ab;
-	border: none;
-	padding-bottom: 4px;
-	letter-spacing: 1px;
-	font-weight: 400;
-	text-shadow: 2px 2px 2px #00139c;
-}
-
-span.penguin:hover {
+.highlighted:hover {
 	background: #ff80ab;
 	color: #fff;
 }
@@ -64,7 +65,6 @@ button {
 	border: none;
 	border-radius: 0;
 	color: #fff;
-	flex-shrink: 0;
 	font-weight: 400;
 	letter-spacing: 2px;
 	outline: none;
@@ -76,7 +76,6 @@ button {
 button#get-directions {
 	background: #00bf9a;
 	border-bottom: 5px solid #009688;
-	flex-shrink: 1;
 	font-size: 19px;
 	width: 100%;
 }
@@ -98,11 +97,8 @@ button#get-directions:focus {
 button#find-start:hover,
 button#find-start:active,
 button#find-start:focus {
-	cursor: pointer;
 	background: #8861c4;
-	/* background: #ff7fab; */
-	/* box-shadow: 8px 6px #ff4081;	 */
-	box-shadow: none;
+	cursor: pointer;
 }
 
 input {
@@ -110,14 +106,13 @@ input {
 	-moz-appearance: none;
 	-webkit-appearance: none;
 	-ms-progress-appearance: none;
-	border: none;
-	border-left: 5px solid #8861c4;
-	border-radius: 0 !important;
 	background: #efefef;
-	padding: 10px;
-	border-radius: 4px;
-	transition: .4s;
+	border: none;
+	border-radius: 0;
+	border-left: 5px solid #8861c4;
 	font-size: 19px;
+	padding: 10px;
+	transition: .4s;
 }
 
 input:active,
@@ -164,8 +159,7 @@ strong {
 }
 
 .line-h {
-	width: 4px;
 	background: #009587;
-	margin: -10px 20px;
 	transform: rotate(15deg);
+	width: 4px;
 }
