--- a/css/layout.css
+++ b/css/layout.css
@@ -24,9 +24,9 @@ body {
 	display: flex;
 	flex-direction: column;
 	flex-shrink: 0;
-	width: 100%;
 	max-width: 950px;
 	padding: 55px 30px 60px;
+	width: 100%;
 }
 
 header {
@@ -44,21 +44,32 @@ h2 {
 }
 
 #search-container {
-	display: flex;
 	align-items: center;
+	display: flex;
 	flex-direction: column;
-	background: white;
 	margin: 1.25rem 0;
 	/* 20/16 */
-	padding: 25px 70px 40px;
+	padding: 25px 25px 40px;
 	/* 30/16 */
-	border-radius: 1.25rem;
-	/* 20/16 */
 }
 
 #penguins {
-	display: flex;
 	align-items: center;
+	display: flex;
+}
+
+#penguins img {
+	align-self: flex-end;
+}
+
+.p-icon-sm {
+	height: 85px;
+	width: 68px;
+}
+
+.p-icon-lg {
+	height: 120px;
+	width: 87px;
 }
 
 h3 {
@@ -74,13 +85,13 @@ p {
 #location {
 	display: flex;
 	flex-direction: column;
-	width: 100%;
 	margin-bottom: 30px;
+	width: 100%;
 }
 
 input {
 	flex: 1;
-	margin-bottom: 10px;	
+	margin-bottom: 10px;
 }
 
 #find-start {
@@ -92,16 +103,15 @@ input {
 }
 
 #map-container {
-	background: grey;
 	flex: 1;
 	position: relative;
 	width: 100%;
 }
 
 #map {
-	width: 100%;
 	height: 100%;
 	min-height: 500px;
+	width: 100%;
 }
 
 #travel-mode {
@@ -112,7 +122,13 @@ input {
 	display: none;
 }
 
-@media (min-width: 700px) {
+@media (min-width: 550px) {
+	#search-container {
+		padding: 25px 70px 40px;
+	}
+}
+
+@media (min-width: 750px) {
 	#location {
 		flex-direction: row;
 		margin-bottom: 25px;
